FIXED: status msg z-index

--- a/template/css/impeesa.css
+++ b/template/css/impeesa.css
@@ -8,6 +8,7 @@
 	position: fixed;
 		bottom: 10px;
 	width: 100%;
+	z-index: 99999999;
 }
 
 #info-msg {
